--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,7 +11,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "verbatimModuleSyntax": true
   },
   "include": [
     "src/**/*.d.ts",
