--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       # Linux deps for WebKitGTK (adjust per distro)
       - name: Linux deps
         if: runner.os == 'Linux'
+        shell: bash
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev
@@ -37,16 +38,16 @@ jobs:
           # Ubuntu 24.04 provides WebKitGTK 4.1, older runners still use 4.0.
           if apt-cache show libwebkit2gtk-4.1-dev >/dev/null 2>&1; then
             sudo apt-get install -y libwebkit2gtk-4.1-dev
+            echo "WAILS_BUILD_ARGS=-tags webkit2_41" >> "$GITHUB_ENV"
           else
             sudo apt-get install -y libwebkit2gtk-4.0-dev
+            echo "WAILS_BUILD_ARGS=" >> "$GITHUB_ENV"
           fi
 
       - name: Build
         shell: bash
         run: |
-          # If you need Ubuntu 24.04 workaround:
-          # EXTRA_TAGS="-tags webkit2_41"
-          wails build -clean
+          wails build -clean ${WAILS_BUILD_ARGS}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
