--- a/packaging/linux/JsonXmlEditor.desktop
+++ b/packaging/linux/JsonXmlEditor.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=JsonXmlEditor
 Comment=JsonXmlEditor
 Exec=JsonXmlEditor
-Icon=appicon_512
+Icon=JsonXmlEditor
 Terminal=false
 Categories=Utility;
 StartupNotify=true
